2010-10-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/eggs.cc: fix nocturnal egg 12h/24h confusion. (Thanks to Malignant
	Manor on the forum)

2010-10-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* scale_*.cc: add missing guard bands. This should fix artifacts along the
	  bottom edge of the screen.

2010-10-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* scale_bilinear.cc, scale_2x.cc: add missing guard bands. This should fix
	  the bilinearplus crashes.

2010-10-13 Dominik Reichardt <dominus@users.sourceforge.net>
	* updated Documentation and FAQ and many other files to reflect an upcoming release of version 1.4.9RC1
	* NEWS: updated with what we've done the last six years
	* AUTHORS: added a couple of authors and changed some email addresses according to our "About Us" page
	* docs/release.txt: updated a bit
	 
2010-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: revert change from r6329 that made monsters attack only
	  rarely. Also added a FIXME, since the expressions involved don't do what
	  they seem to do.

2010-10-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamerend.cc: fix regression from r6352 that ignored light sources
	* gameclk.cc: fix regression from r5763 that delayed dungeon light changes

2010-10-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ibuf8.cc, ibuf16.cc: take pitch into account in fill_static
	* bggame.cc, sigame.cc: remove mentions of Exult from intro
	* palette.cc: fix uninitialized variable

2010-10-05 Dominik Reichardt <dominus@users.sourceforge.net>
	* data/bg/ and data/si: disabled Alt+KP+ and Alt+KP- key combination to switch 
	 resolution, it doesn't play nice with the new render code.

2010-10-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keyactions.cc: Show message when mapedit keys are used and Exult is built
	  without ES support.

2010-10-01  Ryan Nunn <colourles@users.sourceforge.net>